Skin Resize(Ctrl + A) does not work in Symmetry #84376

Closed
opened 2021-01-04 14:41:21 +01:00 by Bookyakuno · 9 comments

Blender Version
Broken: version: 2.92.0 Alpha, branch: master, commit date: 2021-01-03 01:04, hash: 1e8f266591
2021-01-04_22h36_07.png

Short description of error
If you try to skin resize symmetric vertices with symmetric editing enabled, it will only work for one mesh.

When the symmetric editing option is enabled, selecting symmetric vertices and performing a skin resize will only affect the selected vertices.
Therefore, you should turn it off every time you want to edit the skin size symmetrically.

(You can change both sides by enabling the "Topology Mirror" option and selecting both sides)

Exact steps for others to reproduce the error

  • Launch Blender
  • Set skin modifiers to the default cube
  • Enter edit mode
  • Property → Tool Settings → Options → Enable Mirror X Option
  • Select a vertex on one side
  • Run skin resize (Ctrl + A)
  • Skin resizing does not work for symmetric vertices
**Blender Version** Broken: version: 2.92.0 Alpha, branch: master, commit date: 2021-01-03 01:04, hash: `1e8f266591` ![2021-01-04_22h36_07.png](https://archive.blender.org/developer/F9550309/2021-01-04_22h36_07.png) **Short description of error** If you try to skin resize symmetric vertices with symmetric editing enabled, it will only work for one mesh. When the symmetric editing option is enabled, selecting symmetric vertices and performing a skin resize will only affect the selected vertices. Therefore, you should turn it off every time you want to edit the skin size symmetrically. (You can change both sides by enabling the "Topology Mirror" option and selecting both sides) **Exact steps for others to reproduce the error** - Launch Blender - Set skin modifiers to the default cube - Enter edit mode - Property → Tool Settings → Options → Enable Mirror X Option - Select a vertex on one side - Run skin resize (Ctrl + A) - Skin resizing does not work for symmetric vertices
Author

Added subscriber: @Bookyakuno

Added subscriber: @Bookyakuno
Member

Added subscribers: @mano-wii, @lichtwerk

Added subscribers: @mano-wii, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'
Member

Dont think all transform operations are guaranteed to be supported for Mirror X.
In fact: which of the transform tools that work on custom data layers would do this? Dont think there is any?
(e.g. edge crease, bevel weight etc...)

So this might be a feature request? And not a bug?
@mano-wii: what do you think?
Not sure if it would be easy to implement this for TFM_SKIN_RESIZE, looks like the whole mirroring TransDataMirror works with locations?

Dont think all transform operations are guaranteed to be supported for `Mirror X`. In fact: which of the transform tools that work on custom data layers would do this? Dont think there is any? (e.g. edge crease, bevel weight etc...) So this might be a feature request? And not a bug? @mano-wii: what do you think? Not sure if it would be easy to implement this for `TFM_SKIN_RESIZE`, looks like the whole mirroring `TransDataMirror` works with locations?

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

For some historical design reason, the TransData used in this transform mode is the same TransData converted from mesh vertices of conventional modes (Move, Rotate, Scale).
On the one hand this seems to be convenient because in theory it reuses all the extra features (constraint, customdata correction, mirror, updates).
But since all these features are only related to the position of the vertices, it seems that it would be more convenient to create another type of TransData (and TransDataMirror) that is specific to this customdata and this mode (TFM_SKIN_RESIZE).
Although the solution to this problem does not necessarily need this cleanup/refactor, this would be a good step to take first.

I will analyze this better, for now I am confirming it as a bug.

For some historical design reason, the TransData used in this transform mode is the same TransData converted from mesh vertices of conventional modes (Move, Rotate, Scale). On the one hand this seems to be convenient because in theory it reuses all the extra features (constraint, customdata correction, mirror, updates). But since all these features are only related to the position of the vertices, it seems that it would be more convenient to create another type of TransData (and TransDataMirror) that is specific to this customdata and this mode (TFM_SKIN_RESIZE). Although the solution to this problem does not necessarily need this cleanup/refactor, this would be a good step to take first. I will analyze this better, for now I am confirming it as a bug.
Author

The reason I find this an inconvenient bug is that I can't do symmetric editing when symmetric editing is enabled.
Various other operations can be done on both sides by selecting the meshes on both sides, but not for skin resizing.

The reason I find this an inconvenient bug is that I can't do symmetric editing when symmetric editing is enabled. Various other operations can be done on both sides by selecting the meshes on both sides, but not for skin resizing.

This issue was referenced by 54ee410914

This issue was referenced by 54ee4109143b6fdabf749d2fde183907469cfa3b

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2021-01-04 21:37:41 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#84376
No description provided.